[gd_scene load_steps=19 format=3 uid="uid://d061qh53ubpoy"]

[ext_resource type="Script" path="res://bg.gd" id="1_n16os"]
[ext_resource type="Texture2D" uid="uid://ngnh53uhlbhp" path="res://oak_woods_v1.0/BGS/Forest/background_layer_1.png" id="2_r46sb"]
[ext_resource type="Texture2D" uid="uid://dnu65srjdctlc" path="res://oak_woods_v1.0/BGS/Forest/background_layer_2.png" id="3_h1hma"]
[ext_resource type="Texture2D" uid="uid://du11aifppc5gv" path="res://oak_woods_v1.0/BGS/Forest/background_layer_3.png" id="4_hjp0m"]
[ext_resource type="Texture2D" uid="uid://k0a2all26qty" path="res://oak_woods_v1.0/BGS/Hills/_PNG/background1.png" id="5_rob5p"]
[ext_resource type="Texture2D" uid="uid://r0x0xyghjpbx" path="res://oak_woods_v1.0/BGS/Hills/_PNG/background2.png" id="6_gvfju"]
[ext_resource type="Texture2D" uid="uid://chevjtpr55rol" path="res://oak_woods_v1.0/BGS/Hills/_PNG/background3.png" id="7_tyvdm"]
[ext_resource type="Texture2D" uid="uid://b50cjkoxpqj4j" path="res://oak_woods_v1.0/BGS/Hills/_PNG/background4.png" id="8_fq71n"]
[ext_resource type="Texture2D" uid="uid://dx0f3bsh8qsmj" path="res://oak_woods_v1.0/BGS/DesertMountains/background1.png" id="9_fyjnn"]
[ext_resource type="Texture2D" uid="uid://c7ae16sw481ha" path="res://oak_woods_v1.0/BGS/DesertMountains/background2.png" id="10_agqol"]
[ext_resource type="Texture2D" uid="uid://7w6helalhcj4" path="res://oak_woods_v1.0/BGS/DesertMountains/background3.png" id="11_d2m1y"]
[ext_resource type="Texture2D" uid="uid://b4pi0207x2nxg" path="res://oak_woods_v1.0/BGS/DesertMountains/cloud2.png" id="12_qq211"]
[ext_resource type="Texture2D" uid="uid://dsvn6x1wle575" path="res://oak_woods_v1.0/BGS/DesertMountains/cloud4.png" id="13_obk0l"]
[ext_resource type="Texture2D" uid="uid://y4dh4q7scejo" path="res://oak_woods_v1.0/BGS/DesertMountains/cloud7.png" id="14_u44aq"]
[ext_resource type="Texture2D" uid="uid://dd5rnb54k0ek4" path="res://oak_woods_v1.0/BGS/DesertMountains/cloud6.png" id="15_qcy8d"]
[ext_resource type="Texture2D" uid="uid://lajji2giojj0" path="res://oak_woods_v1.0/BGS/RuinedTemple/background.png" id="16_go4d1"]
[ext_resource type="Texture2D" uid="uid://c158gdf7mu1hm" path="res://oak_woods_v1.0/BGS/RuinedTemple/background2.png" id="17_8jpcq"]
[ext_resource type="Texture2D" uid="uid://d13q8e3ji1gjl" path="res://oak_woods_v1.0/BGS/RuinedTemple/background4.png" id="18_vcgch"]

[node name="BG" type="ParallaxBackground"]
script = ExtResource("1_n16os")

[node name="PLforest1" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1153, 0)

[node name="BackgroundLayer1" type="Sprite2D" parent="PLforest1"]
position = Vector2(575.5, 324)
scale = Vector2(3.60312, 3.6)
texture = ExtResource("2_r46sb")

[node name="PLforest2" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1150, 0)

[node name="BackgroundLayer2" type="Sprite2D" parent="PLforest2"]
position = Vector2(576, 324)
scale = Vector2(3.6, 3.6)
texture = ExtResource("3_h1hma")

[node name="PLforest3" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1150, 0)

[node name="BackgroundLayer3" type="Sprite2D" parent="PLforest3"]
position = Vector2(576, 324)
scale = Vector2(3.6, 3.6)
texture = ExtResource("4_hjp0m")

[node name="PLhills1" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background1" type="Sprite2D" parent="PLhills1"]
position = Vector2(573.167, 345.5)
scale = Vector2(1.79427, 1.79427)
texture = ExtResource("5_rob5p")

[node name="PLhills2" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background2" type="Sprite2D" parent="PLhills2"]
position = Vector2(576.167, 346.5)
scale = Vector2(1.79427, 1.79427)
texture = ExtResource("6_gvfju")

[node name="PLhills3" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background3" type="Sprite2D" parent="PLhills3"]
position = Vector2(574.167, 343.5)
scale = Vector2(1.79427, 1.79427)
texture = ExtResource("7_tyvdm")

[node name="PLhills4" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background4" type="Sprite2D" parent="PLhills4"]
position = Vector2(576.167, 344.5)
scale = Vector2(1.79427, 1.79427)
texture = ExtResource("8_fq71n")

[node name="PLdesert1" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background1" type="Sprite2D" parent="PLdesert1"]
position = Vector2(574, 323)
scale = Vector2(1.80313, 1.80313)
texture = ExtResource("9_fyjnn")

[node name="PLdesert2" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background2" type="Sprite2D" parent="PLdesert2"]
position = Vector2(575, 324)
scale = Vector2(1.8, 1.8)
texture = ExtResource("10_agqol")

[node name="PLdesert3" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background3" type="Sprite2D" parent="PLdesert3"]
position = Vector2(578, 319)
scale = Vector2(1.8, 1.8)
texture = ExtResource("11_d2m1y")

[node name="PLdesert4" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Cloud2" type="Sprite2D" parent="PLdesert4"]
position = Vector2(198, 82)
texture = ExtResource("12_qq211")

[node name="PLdesert5" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Cloud4" type="Sprite2D" parent="PLdesert5"]
position = Vector2(652, 227)
texture = ExtResource("13_obk0l")

[node name="PLdesert6" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Cloud7" type="Sprite2D" parent="PLdesert6"]
position = Vector2(1027, 66)
texture = ExtResource("14_u44aq")

[node name="PLdesert7" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Cloud6" type="Sprite2D" parent="PLdesert7"]
position = Vector2(512, 121)
texture = ExtResource("15_qcy8d")

[node name="PLrt1" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background" type="Sprite2D" parent="PLrt1"]
position = Vector2(578, 324)
scale = Vector2(1.125, 1.125)
texture = ExtResource("16_go4d1")

[node name="PLrt2" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background2" type="Sprite2D" parent="PLrt2"]
position = Vector2(575, 326)
scale = Vector2(1.125, 1.125)
texture = ExtResource("17_8jpcq")

[node name="PLrt3" type="ParallaxLayer" parent="."]
visible = false
motion_mirroring = Vector2(1148, 0)

[node name="Background4" type="Sprite2D" parent="PLrt3"]
position = Vector2(575.889, 324.5)
scale = Vector2(1.12674, 1.12674)
texture = ExtResource("18_vcgch")

[connection signal="child_entered_tree" from="PLforest1" to="." method="_on_p_lforest_1_child_entered_tree"]
